# h4r_ramps

./: .gitignore  README.md
h4r_joint_joy_ctrl/: CMakeLists.txt  package.xml
h4r_joint_joy_ctrl/src/: JointJoyCtrl.cpp  JointJoyCtrl.h  joint_joy_ctrl_node.cpp
h4r_ramps/: CMakeLists.txt  package.xml
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/: .cproject  .project  platformio.ini
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/lib/AccelStepper/: AccelStepper.cpp  AccelStepper.h  Makefile  MultiStepper.cpp  MultiStepper.h  keywords.txt
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/lib/AccelStepper/doc/: classAccelStepper-members.html  classAccelStepper.html  functions.html  functions_func.html  index.html
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/lib/TimerOne/__MACOSX/: ._TimerOne.cpp  ._TimerOne.h
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/lib/pcint/: pcInt.cpp  pcInt.h
h4r_ramps/ArduinoPlatformIO/ArduinoRamps/src/: ArduEncoder.cpp  ArduEncoder.h  SerialMotorControl.h  main.cpp  pcInt.h  pins.h
h4r_ramps/config/: ramps.yaml
h4r_ramps/launch/: group.launch  position.launch  ramps.launch  speed.launch  traject.launch
h4r_ramps/src/: RampsHardwareInterface.cpp  RampsHardwareInterface.h  ramps_node.cpp
